playlist update on 07/18/21:\n diff --git a/ytube/_data/lists/abundance-keys.yml b/ytube/_data/lists/abundance-keys.yml index f7b3308..10b5dd1 100644 --- a/ytube/_data/lists/abundance-keys.yml +++ b/ytube/_data/lists/abundance-keys.yml @@ -26,0 +27 @@ +- xK67fAV3zLs diff --git a/ytube/_data/lists/french-keys.yml b/ytube/_data/lists/french-keys.yml index bdb036a..9d1e3cd 100644 --- a/ytube/_data/lists/french-keys.yml +++ b/ytube/_data/lists/french-keys.yml @@ -36,0 +37 @@ +- ClcnSBRdoy0 # "Comment savoir ce qui est vrai en sciences ?" - Intersession Conférence de Citoyens diff --git a/ytube/_data/lists/health-keys.yml b/ytube/_data/lists/health-keys.yml index 4c3a459..ec0ceee 100644 --- a/ytube/_data/lists/health-keys.yml +++ b/ytube/_data/lists/health-keys.yml @@ -2,0 +3 @@ +- RuOvn4UqznU # Fasting For Survival Lecture by Dr Pradip Jamnadas @@ -7 +8 @@ - +- GYlKqiH1N_s # Food As Medicine Preventing & Treating | Dr. Mark Hyman diff --git a/ytube/_data/lists/leadership-keys.yml b/ytube/_data/lists/leadership-keys.yml index 4018c9c..f464bb1 100644 --- a/ytube/_data/lists/leadership-keys.yml +++ b/ytube/_data/lists/leadership-keys.yml @@ -46,0 +47 @@ +- H2rG4Dg6xyI # Isolation is the dream-killer, not your attitude | Barbara Sher | TEDxPrague diff --git a/ytube/_data/lists/seen-keys.yml b/ytube/_data/lists/seen-keys.yml index c998d6a..910cc02 100644 --- a/ytube/_data/lists/seen-keys.yml +++ b/ytube/_data/lists/seen-keys.yml @@ -10,0 +11 @@ +- ORDFeQJDVwc # Is Food Addiction Just a Willpower Issue? No. @@ -22,0 +24 @@ +- LpYwcTFVnv8 # Healthy, (Nutrient) Wealthy and Wise: Diet for Healthy Aging - Research on Aging @@ -24,0 +27 @@ +- lM_HPAXwJFw # Neil deGrasse Tyson: We Might Be Living In Higher Dimensions…But Our Senses Can’t Tell Yet. @@ -2077,0 +2081 @@ +- McjeOAqkkJk # "These HEALTHY Foods Will COMPLETELY HEAL YOUR BODY!" | Mark Hyman & Lewis Howes diff --git a/ytube/_data/ytlist.yml b/ytube/_data/ytlist.yml index fc02e03..14ded4f 100644 --- a/ytube/_data/ytlist.yml 

--- a/ytube/_data/lists/all-videos-keys.yml
+++ b/ytube/_data/lists/all-videos-keys.yml
@@ -53,6 +53,7 @@
 - KpKuma30VYk
 - g31WDkoBTH0
 - FY10oTGO2AI
+- xK67fAV3zLs
 - prloYiQPrSE
 - zPgwQFU1Cwc
 - BdBsFGHdIP0
@@ -13185,23 +13186,17 @@
 - XFW2YQLp_3Q # 1 Hour of Soul Healing Music - In the Arms of an Angel - Blissful Sounds for Sleep - No Words
 - _k_XlAx1_9E # Healing Light Frequency ❤️
 
-
 - azfTB6oXhis # Liquid Waves (Psytrance Progressive Mix Oktober 2018)
-
 
 - NbylLcO5_uU # Global update, mandated vaccination
 - Md y01JdxvE # Dr. Syed Haider Discusses COVID Management (July 2021)
 - oKGH-hfTv9U # The Truth about Natural COVID Immunity
 - UGgvgKE0n8o # Vaccine Passports: THIS Is Where It Leads
 
-
 - p79D6u-6pN4 # Let Food Be Thy Medicine
 - HDHvZk1d0u8 # Zebrafish: Practically People – How to Save the Human Species | Dr. Wendy Leonard | TEDxWilmington
 
-
-
 - xak7uM2HpH4 # SHIV MANTRA MEDITATION with Shamanic Drums || Mantra Trance to Keep Negative Energies Away
-
 
 - _4Cswp7smQ0 # ONUKA - TIME (Official Music Video)
 - Z1vjEQUgenU # Daisy Gray - Lovely (Billie Eilish and Khalid Cover)
@@ -13209,12 +13204,33 @@
 - 63rcRb930Fg # Imany - The A Team (Ed Sheeran Cover)
 - 9HiADisBfQ0 # The Secret Language of Trees
 
-
 - -c5gj9xxxcq # 
 - ZuTFLiFRTHU # Visiclear Video...Miracle or Snakeoil? Read description for details!
 - YGG2zJ8Q-mo # My VisiClear Review (2021) - Scam Or Really Works?
 
 - wrAlPeQj_Ns # James Bay - Incomplete - Tessandra Chavez x Tim Milgram
+
+
+- SwQhKFMxmDY # Change Your Brain: Neuroscientist Dr. Andrew Huberman | Rich Roll Podcast
+- a7GuXglxI-A # Comment nourrir son cerveau? | Emilie Steinbach | TEDxUNamur
+
+
+- ClcnSBRdoy0 # "Comment savoir ce qui est vrai en sciences ?" - Intersession Conférence de Citoyens
+
+
+- RuOvn4UqznU # Fasting For Survival Lecture by Dr Pradip Jamnadas
+- GYlKqiH1N_s # Food As Medicine Preventing & Treating | Dr. Mark Hyman
+
+
+
+
+
+
+
+- ORDFeQJDVwc # Is Food Addiction Just a Willpower Issue? No.
+- LpYwcTFVnv8 # Healthy, (Nutrient) Wealthy and Wise: Diet for Healthy Aging - Research on Aging
+- lM_HPAXwJFw # Neil deGrasse Tyson: We Might Be Living In Higher Dimensions…But Our Senses Can’t Tell Yet.
+- McjeOAqkkJk # "These HEALTHY Foods Will COMPLETELY HEAL YOUR BODY!" | Mark Hyman & Lewis Howes
 
 
 
