--- a/ytube/_data/lists/french-keys.yml
+++ b/ytube/_data/lists/french-keys.yml
@@ -34,6 +34,7 @@
 - A6MmLNmTh-E # BMW 5 Series (G30) v Mercedes-Benz E-Class LWB v Audi A6 - Comparative Review
 - O5rniir8C3o # Enfants précoces, au coeur d&#39;une école pas comme les autres - Documentaire
 - FsBx5LxR1DM # The blockchain in 10 Questions : Anne-Laure&#39;s interview with Michel (part 01)
+- ClcnSBRdoy0 # "Comment savoir ce qui est vrai en sciences ?" - Intersession Conférence de Citoyens
 - zjEfmB0DV0k # Comment oser prendre des risques pour vivre une vie intense ? | Frederique Bedos | TEDxCannes
 - UUTlaih4emo # Fights in Tullahoma
 - 6Hr7ykiqck8 # Méditation du matin (10 affirmations pour se mettre de bonne humeur)
