--- a/ytube/_data/lists/leadership-keys.yml
+++ b/ytube/_data/lists/leadership-keys.yml
@@ -44,6 +44,7 @@
 - GXoErccq0vw # How to Find Your Purpose | Jay Shetty on Impact Theory
 - -qXltitsfH4 # &quot;There are no rules&quot; Motivational video
 - MKU5bFusPMs # Créer le job de ses rêves, c&#39;est possible ! | Matthieu Dardaillon | TEDxIESEGLille
+- H2rG4Dg6xyI # Isolation is the dream-killer, not your attitude | Barbara Sher | TEDxPrague
 - k8GvTgWtR7o # 6 Public Speaking Tips To Hook Any Audience
 - n5GQdtxQTSk # neuro udemy ins - YouTube
 - xtzRxeaf5NQ # What Really Separates the Rich From the Poor
