--- a/ytube/_data/lists/seen-keys.yml
+++ b/ytube/_data/lists/seen-keys.yml
@@ -8,6 +8,7 @@
 - F7SIAdl_Hps # Sarah Lacy: Uber CEO Travis Kalanick is Morally Corrupt
 - 5VLj0z-Es-M # Very Cucked Trump Doesn't Pardon Assange
 - RgkghUvC6PA # 6 Psychological Tricks To Command Respect Instantly
+- ORDFeQJDVwc # Is Food Addiction Just a Willpower Issue? No.
 - rf9qK9QTlq0 # Tiwanaku / Pumapunku Megaliths are Artificial Geopolymers
 - UUDJoHeJbzw # Obviously I need another channel update
 - nuRuFj5c0bE # Why you are wrong about Universal Basic Income | The power of AI within the hands of the few
@@ -20,8 +21,10 @@
 - T6Je9vVE_R0 # Sarah Lacy accepts the Ice Bucket Challenge
 - tY-IYY0yJdE # Elon Musk Funniest Moments
 - fgQPj90OrQE # Why Uber Is A Scam - Math Explains
+- LpYwcTFVnv8 # Healthy, (Nutrient) Wealthy and Wise: Diet for Healthy Aging - Research on Aging
 - GYQRVn8ttwM # "I Can Teach You How to Program The Subconscious Mind" - Dr. Bruce Lipton - An Eye Opening Speech
 - z7zLh3k2hrA # Pourquoi j'ai arrêté le porno (conférence)
+- lM_HPAXwJFw # Neil deGrasse Tyson: We Might Be Living In Higher Dimensions…But Our Senses Can’t Tell Yet.
 - hGyeo8dihq8 # Un Prof Français révèle un vieux secret qui dirige le Monde!!
 - DA91ZnUcK94 # Trump shocked by Hunter Biden : '"sex trafficking", "extortion", Russian money - 'This is Biden son'
 - cxdwEOpGknk # Emily Browning - Sweet Dreams
@@ -2075,6 +2078,7 @@
 - LB3ScXPVi0M # How to Raise Your Frequency and Increase Your Vibration - Teal Swan
 - Q3Kvu6Kgp88 # Edith Piaf - Non, Je ne regrette rien
 - TLySTq7po7o # Lomepal -  Yeux disent (Clip officiel)
+- McjeOAqkkJk # "These HEALTHY Foods Will COMPLETELY HEAL YOUR BODY!" | Mark Hyman & Lewis Howes
 - i1TVZIBj7UA # The Origin of Quantum Mechanics (feat. Neil Turok)
 - mMqVoUQVlCU # Astor Piazzolla - Vuelvo al Sur - Tango for Violin and Piano
 - R0TAdMY9OBU # Hit the road Jack!
