playlist update on 08/09/21:\n diff --git a/ytube/_data/lists/seen-keys.yml b/ytube/_data/lists/seen-keys.yml index 910cc02..516240a 100644 --- a/ytube/_data/lists/seen-keys.yml +++ b/ytube/_data/lists/seen-keys.yml @@ -3,0 +4 @@ +- SemHh0n19LA # 5 steps to designing the life you want | Bill Burnett | TEDxStanford @@ -17,0 +19 @@ +- mUF4afxMpQk # The Greatest Title Sequence I've Ever Seen @@ -2074,0 +2077 @@ +- eQJteHRyclI # The 1918 Pandemic Lasted 3 Years, Only One Way to End COVID-19 Earlier

--- a/ytube/_data/lists/all-videos-keys.yml
+++ b/ytube/_data/lists/all-videos-keys.yml
@@ -13235,6 +13235,9 @@
 
 
 
+- SemHh0n19LA # 5 steps to designing the life you want | Bill Burnett | TEDxStanford
+- mUF4afxMpQk # The Greatest Title Sequence I've Ever Seen
+- eQJteHRyclI # The 1918 Pandemic Lasted 3 Years, Only One Way to End COVID-19 Earlier
 
 
 
