--- a/ytube/_data/lists/seen-keys.yml
+++ b/ytube/_data/lists/seen-keys.yml
@@ -1,6 +1,7 @@
 --- 
 - X3qSHcbSnLU # Bitcoin and blockchain: global development game changers?
 - 54gwAHagA2U # 99 CHOSES QUI N’ARRIVENT QU’EN ALLEMAGNE | Lama Faché
+- SemHh0n19LA # 5 steps to designing the life you want | Bill Burnett | TEDxStanford
 - tCnzsfkzRWI # PandoDaily’s Sarah Lacy Says Uber Threatened Her
 - 4mJcbQC96vk # Immigration Officer Outsmarts Man WIth Fake Documents | UK Border Force | Real Responders
 - i3Nz4IhFGgw # Tired Teacher Puts on 'Happy Face' Before Class | NowThis
@@ -15,6 +16,7 @@
 - iNU895fTzSQ # "Getting Rich Is Easy" | START DOING THIS TODAY! Sadhguru
 - -8ZnPtvCFUc # WATCH: Suspicious pop-up coronavirus test site abruptly closes after being questioned | USA TODAY
 - xS9ewBGdlQg # Obviously I need another channel update
+- mUF4afxMpQk # The Greatest Title Sequence I've Ever Seen
 - qkN8gYXiXdI # Time & Space: Concept or Reality? Is Time Travel Really Possible ? || Sadhguru || Adiyogi
 - brhA0Gc3OIs # 10 Facts About Ashley Alban
 - oF1SUYhDjZ8 # THE UNIVERSE, THE MIND
@@ -2072,6 +2074,7 @@
 - Js0FIf9bESY # Alan Watts    How Everything Happens In This World
 - 28gi1Bgpuoo # David Thomas–Listen To Your Heart
 - A9oILNkV7cA # Yanni - Love Take Me [CINEMATIC]
+- eQJteHRyclI # The 1918 Pandemic Lasted 3 Years, Only One Way to End COVID-19 Earlier
 - _LTsjwiTN7w # Céline Dion - Parler à mon père (Official VIDEO)
 - AByfaYcOm4A # Demi Lovato - Heart Attack
 - kkjBLmM6KEg # Tango Nuevo (Show &quot;So You Think You Can Dance&quot;)
